--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -16,7 +16,7 @@
 @import "base_modules/banner.less";
 @import "base_modules/box.less";
 @import "base_modules/breadcrumbs.less";
-//@import "base_modules/browsehappy.less";
+@import "base_modules/browsehappy.less";
 @import "base_modules/badge.less";
 @import "base_modules/button.less";
 @import "base_modules/card.less";
@@ -32,6 +32,7 @@
 @import "base_modules/list.less";
 //@import "base_modules/map.less";
 //@import "base_modules/media.less";
+@import "base_modules/menu.less";
 @import "base_modules/modal.less";
 //@import "base_modules/overlay.less";
 @import "base_modules/page.less";
