--- a/content/Systems/forms.hbs
+++ b/content/Systems/forms.hbs
@@ -457,9 +457,15 @@ status
 		            <header class="section__head">
 		                <h2 class="section__title">References</h2>
 		            </header>
+
 		            <div class="section__body rte">
 
+		            	<ul>
+		            		<li><a href="http://tympanus.net/Development/TextInputEffects/" target="_blank">http://tympanus.net/Development/TextInputEffects/</a></li>
+		            	</ul>
+
 		            </div>
+
 		        </section>
 
 	        </div>
