--- a/content/_partials/buttongroup.hbs
+++ b/content/_partials/buttongroup.hbs
@@ -9,7 +9,14 @@
 				{{/this}}
 			{{/each }}
 		{{/if}}
-	{{/each }}
+		{{#if menus}}
+			{{#each menus}}
+				{{#this}}
+				{{> menus }}
+				{{/this}}
+			{{/each}}
+		{{/if}}
+	{{/each}}
 {{/if}}
 </div>
 {{/this}}
