--- a/assets/less/base_modules/button.less
+++ b/assets/less/base_modules/button.less
@@ -68,8 +68,7 @@
     border: none;
     cursor: pointer;
     text-align: center;
-
-    ._padding ((@TYPE-LineHeight/4), (@TYPE-FontSize * 1.5), (@TYPE-LineHeight/4), (@TYPE-FontSize * 1.5));
+    ._padding ((@TYPE-LineHeight/4), (@TYPE-FontSize*1.5), (@TYPE-LineHeight/4), (@TYPE-FontSize*1.5));
     ._line-height (@TYPE-FontSize);
     ._transition (all, 0.1s, @BUTTON-Anim);
 
@@ -78,14 +77,11 @@
         color: @BUTTON-TextColor;
     }
 
-    &:hover {
+    &:hover,
+    &:active {
         color: @BUTTON-TextColor;
         background-color: @BUTTON-HoverColor;
         ._depth-1();
-    }
-
-    &:active {
-        
     }
 
 }
@@ -119,64 +115,81 @@
         ._button-create (@BUTTON-DisabledColor, @BUTTON-DisabledHoverColor, @BUTTON-DisabledTextColor);
     }
 }
-    // BUTTON GROUPS
+
+// BUTTON GROUPS
+// ----------------------------------------------------
+
+.buttongroup {
+    position: relative;
+    vertical-align: middle;
+    white-space: nowrap;
+    ._margin-bottom (@TYPE-LineHeight);
+    ._inline-block();
+
+    &:last-child {
+        margin-bottom: 0;
+    }
 
     .buttongroup {
-        position:relative;
-        vertical-align:middle;
-        white-space: nowrap;
-        ._padding(@TYPE-LineHeight/2,0);
-        ._inline-block();
+        margin: 0;
+    }
 
-        .buttongroup {
-            padding:0;
+    > .button,
+    .buttongroup {
+        position: relative;
+        float: left;
+        border-radius: 0;
+        ._depth-0();
+    }
+
+    > .button {
+        &:first-of-type,
+        &.first {
+            ._border-radius-custom (5, 0, 0, 5);
         }
 
-        > .button, .buttongroup {
-            position: relative;
-            float: left;
-            ._border-radius(0);
+        &:last-of-type,
+        &.last {
+            ._border-radius-custom (0, 5, 5, 0);
         }
+    }
+
+    &.justified {
+        display: table;
+        width: 100%;
+        table-layout: fixed;
+        border-collapse: separate;
+
         > .button {
-            &:first-child, &.first {
-                ._border-radius-custom(5, 0, 0, 5);
-            }
-
-            &:last-child, &.last {
-                ._border-radius-custom(0,5,5,0);
-            }
+            display: table-cell;
+            float: none;
+            width: 1%;
         }
+    }
 
-        &.justified {
-            display: table;
+    &.vertical {
+        > .button,
+        .buttongroup {
+            display: block;
+            float: none;
             width: 100%;
-            table-layout: fixed;
-            border-collapse: separate;
-
-            > .button {
-                display: table-cell;
-                float: none;
-                width: 1%;
-            }
+            max-width: 100%;
         }
-        &.vertical {
-            > .button, .buttongroup {
-                display: block;
-                float: none;
-                width: 100%;
-                max-width: 100%;
-            }
-            > .button {
-                &:first-child, &.first {
-                    ._border-radius-custom(5, 5, 0, 0);
-                }
 
-                &:last-child, &.last {
-                    ._border-radius-custom(0,0,5,5);
-                }
+        > .button {
+            &:first-of-type,
+            &.first {
+                ._border-radius-custom (5, 5, 0, 0);
+            }
+
+            &:last-of-type,
+            &.last {
+                ._border-radius-custom (0, 0, 5, 5);
             }
         }
     }
+}
+
 .button__totop {
     color: @COLOR-White;
     background-color: @BUTTON-AltColor;
@@ -223,7 +236,6 @@
     width: 100%;
 }
 
-
 // MOBILE
 // ----------------------------------------------------
 
@@ -243,7 +255,9 @@
         ._padding (21, 12, 0, 12);
     }
     
-    .button__mobile--navigation span, .button__mobile--navigation span:before, .button__mobile--navigation span:after {
+    .button__mobile--navigation span,
+    .button__mobile--navigation span:before,
+    .button__mobile--navigation span:after {
         cursor: pointer;
         border-radius: 2px;
         height: 2px;
@@ -251,7 +265,7 @@
         background: @COLOR-White;
         position: absolute;
         display: block;
-        content: '';
+        content: "";
     }
     
     .button__mobile--navigation span:before {
@@ -262,7 +276,9 @@
         bottom: -4px;
     }
     
-    .button__mobile--navigation span, .button__mobile--navigation span:before, .button__mobile--navigation span:after {
+    .button__mobile--navigation span,
+    .button__mobile--navigation span:before,
+    .button__mobile--navigation span:after {
         transition: all 500ms ease-in-out;
     }
     
@@ -270,7 +286,8 @@
         background-color: transparent;
     }
     
-    .button__mobile--navigation.active span:before, .button__mobile--navigation.active span:after {
+    .button__mobile--navigation.active span:before,
+    .button__mobile--navigation.active span:after {
         top: 0;
     }
     
