--- a/content/Components/menus.hbs
+++ b/content/Components/menus.hbs
@@ -1,10 +1,10 @@
 ---
-title: Dropdowns
+title: Menus
 
-nav-thumb: "placeholder.jpg"
-nav-title: "Dropdowns"
-nav-text: "Dropdowns"
-nav-variant: "dropdowns"
+nav-thumb: "components/menus.png"
+nav-title: "Menus"
+nav-text: "Menus"
+nav-variant: "menus"
 page-category: "components"
 ---
 
@@ -33,6 +33,8 @@ page-category: "components"
 
 		            <div class="secton__body">
 				        <!-- code -->
+
+				        {{> buttongroup buttongroup--dropdown }}
 
 				        <!-- end of code -->
 			        </div>
