--- a/content/Components/cards.hbs
+++ b/content/Components/cards.hbs
@@ -6,6 +6,7 @@ nav-title: "Cards"
 nav-text: "Cards"
 nav-variant: "cards"
 page-category: "components"
+js-cardflipper: true
 ---
 
 <main class="w w--main">
@@ -31,7 +32,7 @@ page-category: "components"
 		                <h2 class="section__title">Example</h2>
 		            </header>
 
-		            <div class="secton__body">
+		            <div class="section__body">
 				        <!-- code -->
 	        				{{> card card }}
 				        <!-- end of code -->
