Fixed default card height

--- a/content/Components/cards.hbs
+++ b/content/Components/cards.hbs
@@ -1,7 +1,7 @@
 ---
 title: Cards
 
-nav-thumb: "placeholder.jpg"
+nav-thumb: "components/cards.png"
 nav-title: "Cards"
 nav-text: "Cards"
 nav-variant: "cards"
@@ -34,7 +34,9 @@ js-cardflipper: true
 
 		            <div class="section__body">
 				        <!-- code -->
-	        				{{> card card }}
+	        				
+	        			{{> card card }}
+	        			
 				        <!-- end of code -->
 			        </div>
 
