--- a/assets/less/modules/ALLOY.less
+++ b/assets/less/modules/ALLOY.less
@@ -5,8 +5,6 @@
 // VARIABLES
 // ----------------------------------------------------
 
-
-
 // Styles specifically only used by the toolkit site
 // ----------------------------------------------------
 
@@ -29,6 +27,11 @@
 	.list__item {
 		float: left;
 	}
+}
+
+.card--example {
+	max-width: 500px;
+	min-height: 400px;
 }
 
 // MOBILE
