Fixed spelling error (secton)

--- a/content/Animation/index.hbs
+++ b/content/Animation/index.hbs
@@ -29,7 +29,7 @@ page-category: "animation"
 		                <h2 class="section__title">Example</h2>
 		            </header>
 
-		            <div class="secton__body">
+		            <div class="section__body">
 				        <!-- code -->
 
 				        <!-- end of code -->
