--- a/content/Components/banners.hbs
+++ b/content/Components/banners.hbs
@@ -7,8 +7,11 @@ nav-text: "Banners"
 nav-variant: "banners"
 page-category: "components"
 ---
+	
+{{> banner banner }}
 
 <main class="w w--main">
+
 	<div class="g">
 	    <div class="c__lg--1">
 
@@ -30,10 +33,9 @@ page-category: "components"
 		                <h2 class="section__title">Example</h2>
 		            </header>
 
-		            <div class="secton__body">
+		            <div class="section__body">
 				        <!-- code -->
-						{{> banner banner }}
-
+						
 				        <!-- end of code -->
 			        </div>
 
