--- a/content/Components/button-groups.hbs
+++ b/content/Components/button-groups.hbs
@@ -30,7 +30,7 @@ page-category: "components"
 		                <h2 class="section__title">Example</h2>
 		            </header>
 
-		            <div class="secton__body">
+		            <div class="section__body">
 				        <!-- code -->
 						{{> buttongroup buttongroup }}
 						{{> buttongroup buttongroup--justified }}
