--- a/content/Components/flashes.hbs
+++ b/content/Components/flashes.hbs
@@ -32,7 +32,7 @@ js-flash: true
 		                <h2 class="section__title">Example</h2>
 		            </header>
 
-		            <div class="secton__body">
+		            <div class="section__body">
 				        <!-- code -->
 
 				        {{> flash flash }}
@@ -46,7 +46,7 @@ js-flash: true
 		            <header class="section__head">
 		            	<h2 class="section__title">Example: Status</h2>
 		            </header>
-                    <div class="secton__body">
+                    <div class="section__body">
 				        {{> flash flash--info }}
 				        {{> flash flash--warn }}
 				        {{> flash flash--danger }}
@@ -61,7 +61,7 @@ js-flash: true
 		            <header class="section__head">
 		            	<h2 class="section__title">Example: Flash</h2>
 		            </header>
-                    <div class="secton__body">
+                    <div class="section__body">
 
 		            	<a href="#" class="button" data-flash='{"item": {"modifier": "","status": "success"},"content": {"text": "This is a flash message and it wont go away until you click the close button!","icon": [{"item": {"modifier": "tick7","size": "xlarge"},"content": {"title": ""}}]}}'>Click here to see a live flash</a>
 
