--- a/content/Components/wells.hbs
+++ b/content/Components/wells.hbs
@@ -31,7 +31,7 @@ page-category: "components"
 		                <h2 class="section__title">Example: Status</h2>
 		            </header>
 
-		            <div class="secton__body">
+		            <div class="section__body">
 				        <!-- code -->
 
 				        {{> well well }}
@@ -49,7 +49,7 @@ page-category: "components"
 		            <header class="section__head">
 		            	<h2 class="section__title">Example: Size</h2>
 		            </header>
-                    <div class="secton__body">
+                    <div class="section__body">
 
 				        {{> well well--xsmall }}
 				        {{> well well--small }}
