--- a/content/Systems/buttons.hbs
+++ b/content/Systems/buttons.hbs
@@ -31,7 +31,7 @@ page-category: "systems"
 		                <h2 class="section__title">Example: Statuses</h2>
 		            </header>
 
-		            <div class="secton__body">
+		            <div class="section__body">
 				        <!-- code -->
 					        {{> button button-success}}
 					        {{> button button-info}}
@@ -48,7 +48,7 @@ page-category: "systems"
 		                <h2 class="section__title">Examples: Sizes</h2>
 		            </header>
 
-		            <div class="secton__body">
+		            <div class="section__body">
 				        <!-- code -->
 					        {{> button button-xsmall}}
 					        {{> button button-small}}
@@ -67,7 +67,7 @@ page-category: "systems"
 		                <h2 class="section__title">Examples: Icons</h2>
 		            </header>
 
-		            <div class="secton__body">
+		            <div class="section__body">
 				        <!-- code -->
 					        {{> button button-tick}}
 					        {{> button button-cross}}
@@ -81,7 +81,7 @@ page-category: "systems"
 		                <h2 class="section__title">Examples: Bages</h2>
 		            </header>
 
-		            <div class="secton__body">
+		            <div class="section__body">
 				        <!-- code -->
 					        {{> button button-badge}}
 				        <!-- end of code -->
