--- a/content/Systems/depth.hbs
+++ b/content/Systems/depth.hbs
@@ -32,7 +32,7 @@ class-master: "depth"
 		                <h2 class="section__title">Example</h2>
 		            </header>
 
-		            <div class="secton__body">
+		            <div class="section__body">
 				        <!-- code -->
 
 				        {{> box box-d0 }}
