--- a/content/Systems/forms.hbs
+++ b/content/Systems/forms.hbs
@@ -428,7 +428,7 @@ status
 		                <h2 class="section__title">Example</h2>
 		            </header>
 
-		            <div class="secton__body">
+		            <div class="section__body">
 				        <!-- code -->
 
 				        <!-- end of code -->
