--- a/content/Systems/helpers.hbs
+++ b/content/Systems/helpers.hbs
@@ -31,7 +31,7 @@ page-category: "systems"
 		                <h2 class="section__title">Examples: Utility Classes</h2>
 		            </header>
 
-		            <div class="secton__body rte">
+		            <div class="section__body rte">
 				        <!-- code -->
 				        	<p>These will appear as classes in their own right and can be used to modify elements without creating a new modifier for that block.</p>
 
