--- a/content/Components/buttons.hbs
+++ b/content/Components/buttons.hbs
@@ -31,7 +31,7 @@ page-category: "components"
 		                <h2 class="section__title">Example: Defaults</h2>
 		            </header>
 
-		            <div class="secton__body">
+		            <div class="section__body">
 				        <!-- code -->
 					        {{> button button}}
 					        {{> button button-alt}}
