--- a/content/Components/hovercard.hbs
+++ b/content/Components/hovercard.hbs
@@ -31,7 +31,7 @@ page-category: "components"
 		                <h2 class="section__title">Example</h2>
 		            </header>
 
-		            <div class="secton__body">
+		            <div class="section__body">
 				        <!-- code -->
 
 				        <div class="hovercard">
