--- a/content/Components/toasts.hbs
+++ b/content/Components/toasts.hbs
@@ -32,7 +32,7 @@ js-toast: true
 		                <h2 class="section__title">Example</h2>
 		            </header>
 
-		            <div class="secton__body">
+		            <div class="section__body">
 				        <!-- code -->
 
 				        {{> toast toast }}
