--- a/content/Systems/images.hbs
+++ b/content/Systems/images.hbs
@@ -31,7 +31,7 @@ page-category: "systems"
 		                <h2 class="section__title">Example</h2>
 		            </header>
 
-		            <div class="secton__body">
+		            <div class="section__body">
 				        <!-- code -->
 
 				        <img src="https://placehold.it/200x200" class="image" alt="" />
