--- a/content/Systems/structure.hbs
+++ b/content/Systems/structure.hbs
@@ -31,7 +31,7 @@ page-category: "systems"
 		                <h2 class="section__title">Example</h2>
 		            </header>
 
-		            <div class="secton__body">
+		            <div class="section__body">
 				        <!-- code -->
 				        <img src="/assets/img/example-zindex.png" alt="description of structure" />
 				        <!-- end of code -->
