--- a/content/Systems/tables.hbs
+++ b/content/Systems/tables.hbs
@@ -87,7 +87,7 @@ page-category: "systems"
 		                <h2 class="section__title">Example</h2>
 		            </header>
 
-		            <div class="secton__body">
+		            <div class="section__body">
 				        <!-- code -->
 
 				        <!-- end of code -->
