--- a/content/_partials/section.hbs
+++ b/content/_partials/section.hbs
@@ -4,7 +4,7 @@
             <h2 class="section__title">{{content.title}}</h2>
         </header>
 
-        <div class="secton__body">
+        <div class="section__body">
 	        <!-- code -->
 				{{content.body}}
 	        <!-- end of code -->
