--- a/assets/less/base_modules/card.less
+++ b/assets/less/base_modules/card.less
@@ -69,7 +69,7 @@
 // ----------------------------------------------------
 
 .flip {
-	._perspective (1000px);
+	._perspective();
 
 	&:hover,
 	&.flipped {
