--- a/assets/less/fontloader.less
+++ b/assets/less/fontloader.less
@@ -81,7 +81,8 @@
 	blockquote,
     //figcaption,
 	.panel__title,
-	.list__nav {
+	.list__nav,
+    .banner__title {
 		font-family: @FONTLOADER-HeadingsFontFamily;
 	}
 }
