--- a/content/Components/banners.hbs
+++ b/content/Components/banners.hbs
@@ -1,7 +1,7 @@
 ---
 title: Banners
 
-nav-thumb: "placeholder.jpg"
+nav-thumb: "components/banners.png"
 nav-title: "Banners"
 nav-text: "Banners"
 nav-variant: "banners"
@@ -30,7 +30,7 @@ page-category: "components"
 
 				<section class="section section--example">
 		            <header class="section__head">
-		                <h2 class="section__title">Example</h2>
+		                <h2 class="section__title">Example &uarr;</h2>
 		            </header>
 
 		            <div class="section__body">
