--- a/assets/less/base_modules/banner.less
+++ b/assets/less/base_modules/banner.less
@@ -1,50 +1,106 @@
 .banner-styles() when not (@MODULE-Banner) { }
 .banner-styles() when (@MODULE-Banner) {
 
-  /* =========================================================================
-  // BADGE
-  // =======================================================================*/
+/* =========================================================================
+// BADGE
+// =======================================================================*/
 
-  // VARIABLES
-  // ----------------------------------------------------
+// VARIABLES
+// ----------------------------------------------------
 
+@BANNER-Color:                  @COLOR-White;
+@BANNER-Overlay:                rgba(0, 0, 0, 0.5);
 
-  // BADGE BASE
-  // ----------------------------------------------------
+// BADGE BASE
+// ----------------------------------------------------
 
-  .banner {
+.banner {
+    background-size: cover;
+    background-position: 50% 50%;
+    position: relative;
 
-  }
+    -ms-behavior: url('/assets/handlers/backgroundsize.min.htc');
+}
 
-  .banner__overlay {}
-  .banner__content {}
-  .banner__foreground {}
-  .banner__title {}
-  .banner__subtitle {}
-  .banner__body {}
-  .banner__actions {}
+.banner__overlay {
+    background-color: @BANNER-Overlay;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
 
-  // MOBILE
-  // ----------------------------------------------------
+.banner__content {
+    color: @BANNER-Color;
+    position: relative;
+    ._text-shadow();
+}
 
-  @media only screen and (max-width: @MQ-Small) {
+.banner__foreground {
+    text-align: center;
+    ._padding (10);
+}
 
+.banner__image {}
 
-  }
+.banner__title {
+    line-height: 1;
+    margin: 0;
+    ._font-size (@TYPE-SIZE-Omega);
+}
 
-  // TABLET & UP
-  // ----------------------------------------------------
+.banner__subtitle {
+    line-height: 1;
+    margin: 0;
+    ._font-size (@TYPE-SIZE-Beta);
+}
 
-  @media only screen and (min-width: @MQ-Medium-min) {
+.banner__body {
+    font-style: italic;
+    ._font-size (@TYPE-SIZE-Delta);
+    ._margin-top (@TYPE-LineHeight);
+}
 
+.banner__actions {
+    ._margin-top (@TYPE-LineHeight);
+}
 
-  }
+// MOBILE
+// ----------------------------------------------------
 
-  // DESKTOP
-  // ----------------------------------------------------
+@media only screen and (max-width: @MQ-Small) {
 
-  @media only screen and (min-width: @MQ-Large-min) {
+    .banner {
+        ._margin-top (44);
+    }
 
-  }
+}
+
+// TABLET & UP
+// ----------------------------------------------------
+
+@media only screen and (min-width: @MQ-Medium-min) {
+
+    .banner {
+        height: 400px;
+    }
+
+    .banner__content {
+        top: 50%;
+    }
+
+    .banner__foreground {
+        max-width: 700px;
+        margin: 0 auto;
+        ._translate-y (-50%);
+    }
+
+}
+
+// DESKTOP
+// ----------------------------------------------------
+
+@media only screen and (min-width: @MQ-Large-min) {
+
+}
 
 } .banner-styles();
