--- a/assets/less/base_modules/banner.less
+++ b/assets/less/base_modules/banner.less
@@ -40,7 +40,9 @@
     ._padding (10);
 }
 
-.banner__image {}
+.banner__image {
+    float: right;
+}
 
 .banner__title {
     line-height: 1;
@@ -71,6 +73,10 @@
 
     .banner {
         ._margin-top (44);
+    }
+
+    .banner__image {
+        display: none;
     }
 
 }
