--- a/assets/less/base_modules/media.less
+++ b/assets/less/base_modules/media.less
@@ -24,7 +24,7 @@
     float: left;
     ._margin (0, @TYPE-FontSize, 0, 0);
 
-    .image
+    .image {
         display: block;
     }
 }
@@ -38,9 +38,7 @@
 // ----------------------------------------------------
 
 @media only screen and (max-width: @MQ-Small) {
-
-    .media {}
-
+    
     .media__image {
         float: none;
         display: block;
