--- a/assets/less/base_modules/wrap.less
+++ b/assets/less/base_modules/wrap.less
@@ -21,8 +21,9 @@
 
 .w--nav {
 	background-color: @NAVIGATION-BgColor;
+	position: relative;
 	z-index: @Z-INDEX-Level5;
-	._depth-2 ();
+	._depth-2();
 }
 
 .w--main {
@@ -57,7 +58,7 @@
 		top: 0;
 		text-align: left;
 		._padding (0, 0, 0, 10);
-		._depth-2 ();
+		._depth-2();
 	}
 
 	.w--nav {
