--- a/content/Components/hovercards.hbs
+++ b/content/Components/hovercards.hbs
@@ -1,10 +1,10 @@
 ---
-title: Hover Card
+title: Hover Cards
 
-nav-thumb: "placeholder.jpg"
-nav-title: "Hover Card"
-nav-text: "Hover Card"
-nav-variant: "hovercard"
+nav-thumb: "components/hovercards.png"
+nav-title: "Hover Cards"
+nav-text: "Hover Cards"
+nav-variant: "hovercards"
 page-category: "components"
 ---
 
@@ -34,15 +34,7 @@ page-category: "components"
 		            <div class="section__body">
 				        <!-- code -->
 
-				        <div class="hovercard">
-        					<a href="#" class="hovercard__avatar"><img src="http://placehold.it/64x64" alt="" class="avatar" /></a>
-			        		<div class="hovercard__content">
-		        				<div class="hovercard__name">Davey Jones</div>
-		        				<div class="hovercard__info">40,000 followers</div>
-			        			<div class="hovercard__bio">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat augue vel varius tincidunt. Suspendisse blandit gravida egestas.</div>
-			        			<div class="hovercard__actions"><a href="#" class="button">Profile</a> <a href="#" class="button">Follow</a></div>
-			        		</div>
-				        </div>
+				        {{> hovercard hovercard }}
 
 				        <!-- end of code -->
 			        </div>
