--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -30,8 +30,9 @@
 @import "base_modules/label.less";
 @import "base_modules/links.less";
 @import "base_modules/list.less";
-//@import "base_modules/map.less";
-//@import "base_modules/media.less";
+@import "base_modules/list__navigation.less";
+@import "base_modules/map.less";
+@import "base_modules/media.less";
 @import "base_modules/menu.less";
 @import "base_modules/modal.less";
 //@import "base_modules/overlay.less";
@@ -49,13 +50,12 @@
 @import "base_modules/image.less";
 @import "base_modules/rte.less";
 @import "base_modules/ink.less";
+@import "base_modules/wrap.less";
 
 // MODULES
 // ----------------------------------------------------
 
 @import "modules/ALLOY.less";
-@import "modules/list__navigation.less";
-@import "modules/wrap.less";
 
 // HELPERS/PRINT
 // ----------------------------------------------------
