Updated box-sixing reset

--- a/assets/less/base/normalize.less
+++ b/assets/less/base/normalize.less
@@ -93,8 +93,12 @@ body {
 }
 
 *,
-*:after,
-*:before {
+*::before,
+*::after {
+    ._box-sizing (inherit);
+}
+
+html {
     ._box-sizing (border-box);
 }
 
