--- a/assets/less/base_modules/hovercard.less
+++ b/assets/less/base_modules/hovercard.less
@@ -61,4 +61,34 @@
 	._padding-top (@TYPE-FontSize);
 }
 
+// MOBILE
+// ----------------------------------------------------
+
+@media only screen and (max-width: @MQ-Small) {
+
+	.hovercard {
+		text-align: center;
+	}
+
+	.hovercard__avatar {
+		float: none;
+		display: inline-block;
+	}
+
+}
+
+// TABLET
+// ----------------------------------------------------
+
+@media only screen and (min-width: @MQ-Medium-min) and (max-width: @MQ-Medium) {
+
+}
+
+// DESKTOP
+// ----------------------------------------------------
+
+@media only screen and (min-width: @MQ-Large-min) {
+
+}
+
 } .hovercard-styles();
