Extra files describing needed elements and reorganization of the tests area.

--- a/content/Examples/standard.hbs
+++ b/content/Examples/standard.hbs
@@ -28,7 +28,7 @@ page-category: "examples"
 
 <main class="main">
 	<div class="w w--banner">
-		[BANNER MAIN]
+		{{> banner banner }}
 	</div>
 	<div class="w w--actions">
 		<div class="g">
@@ -50,7 +50,7 @@ page-category: "examples"
 	<div class="w w--intro">
 		<div class="g">
 			<div class="c__lg--7-12 c__md--1-2">
-				[INTRO CONTENT]
+				{{> content content }}
 
 			</div>
 			<div class="c__lg--5-12 c__md--1-2">
