--- a/content/_partials/form__label.hbs
+++ b/content/_partials/form__label.hbs
@@ -1,9 +1,11 @@
 {{#this}}
-	<label
-	    {{#if item.for}}for="{{item.for}}"{{/if}}
-	    class="form__label{{#if item.modifier}} form__label--{{item.modifier}}{{/if}}
-	    {{#if item.disabled}} disabled{{/if}}
-	    {{#if item.hidden}} hidden-text{{/if}}">
-	    <span>{{{content.text}}}</span>
-	</label>
+	{{#if content.text}}
+		<label
+			{{#if item.for}}for="{{item.for}}"{{/if}}
+			class="form__label{{#if item.modifier}} form__label--{{item.modifier}}{{/if}}
+			{{#if item.disabled}} disabled{{/if}}
+			{{#if item.hidden}} hidden-text{{/if}}">
+			<span>{{{content.text}}}</span>
+		</label>
+	{{/if}}
 {{/this}}
