--- a/content/_partials/input__checkbox.hbs
+++ b/content/_partials/input__checkbox.hbs
@@ -1,8 +1,8 @@
 {{#this}}
+    <span class="form__input{{#if item.modifier}} form__input--{{item.modifier}}{{/if}}{{#if item.size}} {{item.size}}{{/if}}{{#if item.status}} {{item.status}}{{/if}}">
     <input
         type="checkbox"
-        class="form__input
-            {{#if item.modifier}} form__input--{{item.modifier}}{{/if}}"
+        class="input input--checkbox"
         {{#if item.checked}} checked="checked" aria-checked="true"{{/if}}
         {{#if item.required}} required="required" aria-required="true"{{/if}}
         {{#if item.disabled}} disabled="disabled" aria-disabled="true"{{/if}}
@@ -12,4 +12,5 @@
         {{#if item.tabindex}} tabindex="{{item.tabindex}}"{{/if}}
         {{#if item.accesskey}} accesskey="{{item.accesskey}}"{{/if}}
     />
+    </span>
 {{/this}}
