--- a/content/_partials/input__text.hbs
+++ b/content/_partials/input__text.hbs
@@ -1,11 +1,9 @@
 {{#this}}
+    <span class="form__input{{#if item.modifier}} form__input--{{item.modifier}}{{/if}}{{#if item.size}} {{item.size}}{{/if}}{{#if item.status}} {{item.status}}{{/if}}">
     <input
         type="text"
         role="textbox"
-        class="form__input
-            {{#if item.modifier}} form__input--{{item.modifier}}{{/if}}
-            {{#if item.status}} {{item.status}}{{/if}}
-            {{#if item.size}} {{item.size}}{{/if}}"
+        class="input input--text"
         {{#if item.required}} required="required" aria-required="true"{{/if}}
         {{#if item.readonly}} readonly="readonly" aria-readonly="true"{{/if}}
         {{#if item.disabled}} disabled="disabled" aria-disabled="true"{{/if}}
@@ -13,7 +11,6 @@
         {{#if item.id}} id="{{item.id}}"{{/if}}
         {{#if item.name}} name="{{item.name}}"{{/if}}
         {{#if item.maxlength}} maxlength="{{item.maxlength}}"{{/if}}
-        {{#if item.minlength}} pattern="{{item.minlength}}"{{/if}}
         {{#if item.pattern}} pattern="{{item.pattern}}"{{/if}}
         {{#if item.autocomplete}} autocomplete="{{item.autocomplete}}"{{/if}}
         {{#if item.tabindex}} tabindex="{{item.tabindex}}"{{/if}}
@@ -21,4 +18,5 @@
         {{#if content.placeholder}} placeholder="{{content.placeholder}}"{{/if}}
         {{#if content.value}} value="{{content.value}}"{{/if}}
     />
+    </span>
 {{/this}}
